# Veles

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  USAGE.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
.kiro/specs/01-prose-retrieval-foundation/: spec.md
crates/veles-cli/: Cargo.toml  README.md
crates/veles-cli/src/: cli.rs  format.rs  handlers.rs  main.rs  output.rs  util.rs
crates/veles-cli/src/tui/: app.rs  mod.rs  search.rs  ui.rs
crates/veles-core/: Cargo.toml
crates/veles-core/benches/: build.rs  search.rs  update.rs
crates/veles-core/benches/common/: mod.rs
crates/veles-core/examples/: bench.rs  bm25_compare.rs
crates/veles-core/src/: cache.rs  chunker.rs  distill.rs  filter.rs  format.rs  ingest.rs  lease.rs  lib.rs  lock.rs  model.rs  persist.rs  pipeline.rs  rerank.rs  runtime.rs  scope.rs  tokenizer.rs  types.rs  veles_index.rs  walker.rs
crates/veles-core/src/index/: dense.rs  search.rs  sparse.rs  topk.rs
crates/veles-core/src/ranking/: boosting.rs  mod.rs  penalties.rs
crates/veles-grpc/src/: lib.rs
crates/veles-mcp/: Cargo.toml  README.md
crates/veles-mcp/src/: coordinator.rs  dashboard.rs  lib.rs  watch.rs
dist-out/: RELEASE_NOTES.md  SHA256SUMS.txt  install.sh
docs/: README.md
docs/design/: automatic-workspace-indexing.md  coordination-and-pipeline-model.md  data-architecture.md
docs/guides/: search-quickstart.md
docs/history/: benchmark-cpu-transformer-embedding-2026-06-27.md  research-context-tool-landscape-2026-06-27.md
docs/steering/: pillars.md  product.md
pipelines/: session_distill.py  session_memory.py  veles.pipeline.json
proto/: veles.proto
