[workspace]
resolver = "2"
members = [
    "crates/veles-core",
    "crates/veles-grpc",
    "crates/veles-mcp",
    "crates/veles-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Julius Methody <julymetodiev@gmail.com>", "Julius Methody <julymetodiev@gmail.com>"]
repository = "https://github.com/julymetodiev/Veles"
description = "Veles.."

[workspace.dependencies]
# Core dependencies
model2vec-rs = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rayon = "1"
regex = "1"
walkdir = "2"
ignore = "0.4"            # gitignore-aware file walker (ripgrep's crate)
path-clean = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Workspace crate deps
veles-core = { path = "crates/veles-core" }
veles-grpc = { path = "crates/veles-grpc" }
veles-mcp = { path = "crates/veles-mcp" }
