[workspace]
resolver = "2"
members = [
    "crates/veles-core",
    "crates/veles-grpc",
    "crates/veles-mcp",
    "crates/veles-cli",
]

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT"
authors = ["Julius Methody <julymetodiev@gmail.com>"]
repository = "https://github.com/julymetodiev/Veles"
homepage = "https://github.com/julymetodiev/Veles"
description = "Fast and accurate local code search for AI agents (Rust reimplementation of Semble)"

[workspace.dependencies]
# Core dependencies
model2vec-rs = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rayon = "1"
regex = "1"
walkdir = "2"
ignore = "0.4"            # gitignore-aware file walker (ripgrep's crate)
globset = "0.4"           # glob path filter shared by CLI and MCP
path-clean = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Persistence
bincode = "1.3"

# Workspace crate deps. `version` is required by `cargo publish` so that
# the published manifest can resolve siblings via crates.io after `path`
# is stripped at publish time.
veles-core = { path = "crates/veles-core", version = "0.2.3" }
veles-grpc = { path = "crates/veles-grpc", version = "0.2.3" }
veles-mcp = { path = "crates/veles-mcp", version = "0.2.3" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
