[package]
name = "veles-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for Veles code search"

[[bin]]
name = "veles"
path = "src/main.rs"

[dependencies]
veles-core = { workspace = true }
veles-grpc = { workspace = true }
veles-mcp = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
