[package]
name = "veles-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI binary for Veles code search"

[[bin]]
name = "veles"
path = "src/main.rs"

[dependencies]
veles-core = { workspace = true }
veles-grpc = { workspace = true }
veles-mcp = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
clap_mangen = "0.2"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
crossbeam-channel = "0.5"
unicode-width = "0.2"
