[package]
name = "veles-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Veles code search — indexing, chunking, BM25, dense search, and hybrid ranking"

[dependencies]
model2vec-rs = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
ahash = { version = "0.8", features = ["serde"] }
dashmap = { workspace = true }
bincode = { workspace = true }

# Transformer rerank is DELEGATED to a local OpenAI-compatible /v1/embeddings
# server (LM Studio, ollama, TEI, …) over HTTP — the GPU/runtime lives there, so
# veles stays a lean single binary. `ureq` is a tiny pure-Rust blocking client
# (already in the dep tree); no candle, no onnxruntime, no bundled CUDA.
ureq = { version = "2", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Tree-sitter for symbol extraction
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false

[[bench]]
name = "build"
harness = false

[[bench]]
name = "update"
harness = false
