[package]
name = "veles-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Veles code search"

[dependencies]
veles-core = { workspace = true }
model2vec-rs = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "sync", "macros", "rt", "time", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

# Optional per-repo web dashboard (off by default to keep the binary lean).
axum = { version = "0.7", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

[features]
# Build a per-repo web dashboard served from `serve-mcp --dashboard`.
dashboard = ["dep:axum", "dep:tokio-stream", "tokio/net", "tokio/rt-multi-thread"]

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["test-util", "macros"] }
